--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,1 +1,24 @@
-<p>grafica1 works!</p>
+<div class="row">
+    <div class="col-6">
+        <app-dona titulo="Ventas" 
+                [doughnutChartData]="doughnutChartData1" ></app-dona>
+    
+    </div>
+    
+    <div class="col-6">
+        <app-dona titulo="Compras"
+        [doughnutChartData]="doughnutChartData2" ></app-dona>
+    
+    </div>
+</div>
+<div class="row">
+    <div class="col-6">
+        <app-dona titulo="Cambios" ></app-dona>
+    
+    </div>
+    
+    <div class="col-6">
+        <app-dona></app-dona>
+    
+    </div>
+</div>
